<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailMSActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingTop="30dp"

        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/shortNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:includeFontPadding="false"
            android:text="@string/detail"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="34sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <ImageView
                android:id="@+id/frontIV"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                app:srcCompat="@drawable/ic_baseline_image_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/backIV"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                app:srcCompat="@drawable/ic_baseline_image_24"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/menuBar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="@dimen/appbar_padding"
                android:layout_marginBottom="@dimen/appbar_padding"
                android:background="@drawable/menu_bar"
                android:divider="@drawable/divider_horizontal_menubar"
                android:elevation="2dp"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/qrButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="10"
                        app:srcCompat="@drawable/ic_baseline_qr_code_24"
                        tools:ignore="ContentDescription,NestedWeights" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="QR Code"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="10"
                        app:srcCompat="@drawable/ic_baseline_share_24"
                        tools:ignore="ContentDescription,NestedWeights" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/share"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="10"
                        app:srcCompat="@drawable/ic_baseline_edit_24"
                        tools:ignore="ContentDescription,NestedWeights" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/edit"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="10"
                        app:srcCompat="@drawable/ic_baseline_restore_from_trash_24"
                        tools:ignore="ContentDescription,NestedWeights" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="5dp"
                        android:text="@string/delete"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAlignment="center"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"
                    android:textSize="@dimen/user_item_textSize"
                    android:text="@string/pinned"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/pinnedSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/fullNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Căn cước công dân"
                    android:textSize="@dimen/user_item_textSize"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullName" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/idTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="034202011041"
                    android:textSize="@dimen/user_item_textSize"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ID"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/issuerTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cục Quản Lý Dân Cư"
                    android:textSize="@dimen/user_item_textSize"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/issuer" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorSecondary" />

            <LinearLayout
                android:id="@+id/exclusiveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/exclusiveDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="16/11/2022"
                    android:textSize="@dimen/user_item_textSize"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/exclusiveDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/expDate" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorSecondary" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customStringRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/customDateRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>